--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
 *.o
 *~
+Makefile.in
+Makefile
+aclocal.m4
+autom4te.cache/
+config.h.in
+config.h
+config.log
+config.status
+configure
+.deps
+stamp-h1
+mp3server
