--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,17 @@ Makefile.in
 Makefile
 aclocal.m4
 autom4te.cache/
+compile
+config.guess
 config.h.in
 config.h
 config.log
 config.status
+config.sub
 configure
+depcomp
+install-sh
+missing
 .deps
 stamp-h1
 mp3server
